--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "friendsofphp/php-cs-fixer": "^3.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.3",
         "laravel/framework": "^8.54",
         "laravel/octane": "^1.0",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.6"
+        "laravel/tinker": "^2.6",
+        "squizlabs/php_codesniffer": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
