--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
+    "match-sorter": "^6.3.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
